static/styles/style.css
body {
  /* colors */
  --link-hover-color: #938dfe;
  --code-hover-color-border: #ffc000;
  /* --ico-color: invert(23%) sepia(0%) saturate(0%) hue-rotate(261deg) brightness(101%) contrast(112%); /* equiv to #333 */
  --ico-color: invert(84%) sepia(100%) saturate(0%) hue-rotate(170deg) brightness(109%) contrast(92%); /* equiv to #f5f5f5 */
  --ico-hover-color: brightness(0) saturate(100%) invert(56%) sepia(90%) saturate(563%) hue-rotate(205deg) brightness(93%) contrast(95%);
  --header-bgnd-color: #333;
  --white-text: #ffffff;
  --sidebar-bgnd-color: var(--article-bgnd-color);
  --link-visited-color: #2b81dd;


  /* light mode */
  --bgnd-color: #f5f5f5;
  --article-bgnd-color: #ffffff;
  --divider-color: #444;
  --mobile-sidebar-bgnd-color: #333;
  --main-text: #333;
  --article-text: #444;
  --code-hover-color: #ffe8b0;
  --dark-mode-icon: "☾";
  --link-color: #7516ff;
  /* margins/padding */
  --sidebar-width: 130px;
  --box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
  --code-line-height: 1.3em;

}

/* dark mode */
body.alt-color-mode { 
  --bgnd-color: #0000006d;
  --article-bgnd-color: #333;
  --divider-color: #e6e6e6;
  --mobile-sidebar-bgnd-color: #5f5c59;
  --main-text: #f5f5f5;
  --article-text: #e6e6e6;
  --code-hover-color: #ffe9b08a;
  --dark-mode-icon: "☀︎";
  --link-color: #938dfe;
}

/* if browser asks for dark mode */
@media (prefers-color-scheme: dark) {
  /* dark mode */
  body { 
    --bgnd-color: #0000006d;
    --article-bgnd-color: #333;
    --divider-color: #e6e6e6;
    --mobile-sidebar-bgnd-color: #5f5c59;
    --main-text: #f5f5f5;
    --article-text: #e6e6e6;
    --code-hover-color: #ffe9b08a;
    --dark-mode-icon: "☀︎";
    --link-color: #938dfe;
  }

  /* light mode */
  body.alt-color-mode { 
    --bgnd-color: #f5f5f5;
    --article-bgnd-color: #ffffff;
    --mobile-sidebar-bgnd-color: #e0e0e0;
    --divider-color: #444;
    --main-text: #333;
    --article-text: #444;
    --code-hover-color: #ffe8b0;
    --dark-mode-icon: "☾";
    --link-color: #7516ff;
  }
}

/* Reset some default styles for better consistency across browsers */
body, h1, h2, h3, h4, p, ul, ol, li {
  margin: 0;
  padding: 0;
}

/* General formatting */
body {
  font-family: 'Arial', sans-serif;
  line-height: 1.6;
  background-color: var(--bgnd-color);
  color: var(--main-text);
}

.container {
  max-width: 800px;
  margin: 0 auto;
  padding: 20px;
}

h1 {
  font-size: 2em;
}
h2 {
  padding: 5px;
}
h3 {
  padding: 5px;
}

article {
  background-color: var(--article-bgnd-color);
  padding: 1.875rem;
  margin: 3.75rem;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

article h2 {
  color: var(--main-text);
}

article h4 {
  font-style: italic;
  padding-left: 20px;
}

article .article-text {
  color: var(--article-text);
}

.main-wrapper p {
  padding: 6px;
}

a {
  transition: color 0.3s ease-in-out;
  text-decoration: none;
  color: var(--link-color);
}

a:visited {
  color: var(--link-visited-color);
}

.blog-image {
  max-width:500px
}


/* Header title style */
.header {
  top: 0; /* Align it to the top of the page */
  width: 100%;
  z-index: 999; /* Ensure the header is above other content */
  position: fixed;
  text-align: center;
  background-color: var(--header-bgnd-color);
}
.header a:hover {
  color: var(--link-hover-color);
}
#wsite-title {
  font-family: 'Roboto', sans-serif;
  font-size: 24px;
  color: var(--white-text); /* Adjust the color to your liking */
  letter-spacing: 1px;
  text-decoration: none;
}

/* Navigation styles */
.title {
  padding: 5px;
}
.navbar {
  padding: 5px;
  list-style-type: none;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.menu-toggle {
  display: none;
  cursor: pointer;
  text-decoration: none;
  color: var(--white-text);
}
.bar {
  display: block;
  height: 3px;
  width: 25px;
  background-color: var(--white-text);
  margin: 5px auto;
}
.nav-list {
  display: flex;
  list-style-type: none;
  flex-grow: 1;
  justify-content: center; 
}
.nav-list li {
  display: inline-block;
  margin-inline: 5px;
}
.nav-list a {
  text-decoration: none;
  color: var(--white-text);
  font-weight: bold;
}
.navbar .options {
  position: absolute;
  right: 0;
  top: 50px;
}

.options {
  margin-left: auto;
}
.options button {
  border: none;
  outline: none;
  background: transparent;
  font-size: 1.1rem;
  text-decoration: none;
  color: var(--white-text);
}

button.dark-mode::before {
  content: var(--dark-mode-icon)
}

.article-list {
  padding-left: 25px;
  padding-right: 25px;
}

.contact-container {
  padding: 5px;
}
.link-with-logo a {
  padding: 5px;
}
.link-with-logo img {
  width: 24px;
  height: 24px;
  filter: var(--ico-color);
}
.link-with-logo img:hover {
  filter: var(--ico-hover-color);
}

/* Style for code syntax */
.code-container {
  background-color: var(--bgnd-color);
}
.code-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 0.5rem;
  padding-left: 1.0rem;
  padding-right: 1.0rem;
  padding-bottom: 0.5rem;

  /* height: 5px; */
  border-bottom: 1px solid var(--divider-color);
  line-height: 80%;
}
.code-actions button {
  z-index: 100;
}
.code-body {
  display: flex;
  align-items: baseline;
  padding: 10px;
  border-radius: 5px;
  overflow-x: auto; /* Enable horizontal scrolling for long lines of code */
  line-height: var(--code-line-height);
}
pre {
  font-family: 'Courier New', monospace;
  background-color: var(--bgnd-color);
  color: var(--main-text);
  flex-grow: 1; /* Allow code block to grow and take remaining space */
  margin-top: 10px;
  margin-bottom: 10px;
}
.code-text {
  margin: 0px;
  display: block;
  width: auto;
}
.line-numbers {
  display: flex;
  flex-direction: column; /* Display line numbers vertically */
  margin-right: 10px;
  color: var(--article-text);
}
.line-numbers-background {
  background-color: var(--article-bgnd-color);
  padding: 0 10px;
  border-radius: 5px 0 0 5px;
}
.line-highlight:hover{
  background-color: var(--code-hover-color);
  /*display: block;*/
  margin-right: -10px;
  margin-left: -10px;
  padding: 0 10px;
  border-left: 5px solid var(--code-hover-color-border);
}

.content {
  padding-top: 6rem; /* accommodate the fixed header */
}

.content-container {
    margin: 20px;
    text-align: center;
}

.info-page {
  margin-left: 25%;
  margin-right: 25%;
  text-justify: left;
}

.info-page ul {
  display: inline-block;
  line-height: 1.75;
  padding-bottom: 10px;
}

/* table styling */
table {
    border-collapse: collapse;
}

th, td {
    border-bottom: 1px solid var(--article-text);
    padding: 6px;
    text-align: left;
}

th {
    font-weight: bold;
}

tr:last-child td {
    border-bottom: none;
}


/* projects page styling */
ul.project-links {
  list-style-type: none;
  display: inline-block;
  line-height: 1.75;
  padding-bottom: 10px;
}

.info-page li.project {
  text-align: left;
  width: unset;
  float: unset;
}

li.project a {
  text-decoration: none;
}

/* about page styling */
.info-page li {
  display: block;
  width: 25%;
  float: left;
}

/* Style for sidebar */
.sidebar {
  width: 130px;
  position: fixed;
  background-color: var(--sidebar-bgnd-color);
  overflow-x: hidden;
  padding: 12px 0px;
  text-align: center;
  font-size: 18px;
  box-shadow: var(--box-shadow)
}

.sidebar-header {
  font-weight: bold;
  padding: 8px;
}

.sidebar-section {
  color: var(--main-text);
  line-height: 1.2;
}

.sidebar a {
  padding: 2px 16px;
  text-decoration: none;
  display: block;
  color: var(--article-text);
}


.sidebar a:hover {
  color: var(--link-hover-color);
}

.posts {
  margin-left: var(--sidebar-width);
}


/* MOBILE */

 /* For tablets and smaller devices */
 @media (max-width: 768px) {
  body {
    --sidebar-bgnd-color: var(--mobile-sidebar-bgnd-color);
  }

  .container {
    max-width: 100%;
    padding: 10px;
  }

  .header {
    position: relative;
  }

  .content {
    padding-top: 0rem; /* accommodate the fixed header */
  }

  .info-page {
    margin-left: 10%;
    margin-right: 10%;
    text-justify: left;
  }

  .nav-list {
    flex-direction: row;
    display: flex;
    justify-content: space-around;
    text-align: center;
    background-color: var(--header-bgnd-color);
    width: 100%;
    padding: 0px 10px;
  }

  .nav-list li {
    margin: 0px;
  }

  .menu-toggle {
    display: block; /* Show the menu toggle button */
  }

  .posts {
    margin-left: 0; /* Remove sidebar margin for full-width content */
  }

  .sidebar {
    display: none; /* Hide sidebar on smaller screens */
  }
  .expand-sidebar {
    display: unset !important;
  }

  article {
    margin: 40px 0; /* Adjust article margins for smaller screens */
    padding: 15px;
  }

  .blog-image {
    max-width: 100%; /* Make images responsive */
    height: auto;
  }

  .sidebar {
    display: none;
    /* position: relative; */  /* don't overlay */
    width: 100%;
  }

  .sidebar-toggle {
    display: unset;
    cursor: pointer;
    background-color: var(--header-bgnd-color);
    color: var(--white-text);
    padding: 10px;
    text-align: center;
  }
}

@media (max-width: 480px) {
  h1 {
    font-size: 1.5em;
  }

  .container {
    padding: 5px;
  }

  article {
    padding: 10px;
  }

  .options button {
    font-size: 1rem;
  }
}

